--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-modal": "^3.3.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "validator": "^9.4.1",
