--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "live-server public",
     "build": "webpack",
     "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest --config=jest.config.json"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -19,11 +19,15 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
     "jest": "^22.4.3",
     "live-server": "^1.2.0",
     "moment": "^2.22.0",
     "node-sass": "^4.8.3",
     "normalize.css": "^8.0.0",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^16.5.0",
@@ -32,6 +36,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^16.3.1",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
