--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "expensify-app",
+  "engines": {
+    "node": "9.5.0",
+    "yarn": "1.5.1" 
+  },
   "version": "1.0.0",
   "main": "index.js",
   "author": "Daniel Anderson",
