--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-sass": "^4.8.3",
     "normalize.css": "^8.0.0",
     "npm": "^5.8.0",
+    "numeral": "^2.0.6",
     "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
